finish author page
